...
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/navHome"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
...
            android:text="History"
            android:textColor="#A7AAB3"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navProfile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
...
