...
            android:textStyle="bold" />

    </com.google.android.material.appbar.MaterialToolbar>

    <!-- Comments list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewComments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
...
